--- a/Yes_Bank_Stock_Closing_Price_Prediction_Capstone_Project_2.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction_Capstone_Project_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Yes Bank Stock Closing Price Prediction-Capstone Project-2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODNgRHoT/LEesm6IghucCy",
+      "authorship_tag": "ABX9TyPUcOo68QOfQK3YdNkePrlC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2154,6 +2154,208 @@
       "metadata": {
         "id": "Yx1yn1r8hR-9"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Splitting data in Train and Test**"
+      ],
+      "metadata": {
+        "id": "CAWN4BmahrdF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Splitting of Data\n",
+        "\n",
+        "X = Independent Variable\n",
+        "\n",
+        "y = Dependent Variable"
+      ],
+      "metadata": {
+        "id": "UxAO6FeaiEAh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitting data into Dependent and Independent Variables\n",
+        "\n",
+        "X = df.drop(columns=['Close','Date'])\n",
+        "y = df['Close']"
+      ],
+      "metadata": {
+        "id": "5QSWdHTqiIOT"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Transformation of data\n",
+        "X = X.apply(zscore)\n",
+        "y = np.log10(y)"
+      ],
+      "metadata": {
+        "id": "j80KqGMciI9b"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# splitting the dataset into the training set and test set with 80-20\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)\n",
+        "print(X_train.shape)      # Shape of the Training dataset\n",
+        "print(X_test.shape)       # Shape of the Test dataset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9zUv7Lr2iOeT",
+        "outputId": "3d712ea9-c828-48e9-f32d-276c498d375a"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(148, 3)\n",
+            "(37, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Transforming data\n",
+        "scaler = MinMaxScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "FeGbOvXniTeW"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### We  will build 5 regression models for our data.\n",
+        "* **Linear Regression** - Linear regression is one of the easiest and most popular Machine Learning algorithms. It is a statistical method that is used for predictive analysis.Linear regression algorithm shows a linear relationship between a dependent (y) and one or more independent (y) variables, hence called as linear regression.\n",
+        "* **Lasso Rigression** - Lasso regression is a type of linear regression that uses shrinkage. Shrinkage is where data values are shrunk towards a central point, like the mean. The lasso procedure encourages simple, sparse models (i.e. models with fewer parameters). \n",
+        "* **Ridge Rigression** - Ridge regression is a model tuning method that is used to analyse any data that suffers from multicollinearity. This method performs L2 regularization. When the issue of multicollinearity occurs, least-squares are unbiased, and variances are large, this results in predicted values to be far away from the actual values.\n",
+        "* **Elastic Net Regression** - Elastic net is a popular type of regularized linear regression that combines two popular penalties, specifically the L1 and L2 penalty functions. ... Elastic Net is an extension of linear regression that adds regularization penalties to the loss function during training. \n",
+        "* **XG Boost Regrression** - XGBoost is a powerful approach for building supervised regression models. The validity of this statement can be inferred by knowing about its (XGBoost) objective function and base learners. The objective function contains loss function and a regularization term. It tells about the difference between actual values and predicted values, i.e how far the model results are from the real values."
+      ],
+      "metadata": {
+        "id": "oHp8rl_IifDa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Linear Regression**\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3I2vpMXwilqG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fit data into linear regression\n",
+        "regressor = LinearRegression()\n",
+        "regressor.fit(X_train, y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3yzcpe_ViuAt",
+        "outputId": "60ba7c0c-2554-43d5-f4a1-5af24a4cfeec"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#train accuracy of linear regression model\n",
+        "round(regressor.score(X_train,y_train),4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1oCnpEDxiu0r",
+        "outputId": "cf36e097-2d39-43ef-e0bd-a8d284373f8a"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8147"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test accuracy of linear regression model\n",
+        "round(regressor.score(X_test, y_test), 4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_rQHERGfjOa9",
+        "outputId": "8ae80536-68ce-43c2-ca80-cc1650cbd156"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8226"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     }
   ]
 }
