--- a/Yes_Bank_Stock_Closing_Price_Prediction_Capstone_Project_2.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction_Capstone_Project_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Yes Bank Stock Closing Price Prediction-Capstone Project-2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPUcOo68QOfQK3YdNkePrlC",
+      "authorship_tag": "ABX9TyPBeTkMRo/I/v6wZQ47IcCe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2354,6 +2354,262 @@
           },
           "metadata": {},
           "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Prediction**"
+      ],
+      "metadata": {
+        "id": "t5Pxhj7mkx7q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Predict y_test on the basis of train sets\n",
+        "y_pred = regressor.predict(X_test)\n",
+        "y_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SJLar3zVk0Gi",
+        "outputId": "53bf09e5-b861-4c26-f7a2-d0819ee4b117"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.51738682, 1.53211837, 1.63519027, 1.47539354, 2.01471458,\n",
+              "       2.74366588, 1.62601875, 1.51851685, 1.52352095, 1.62092587,\n",
+              "       2.07716025, 1.61560053, 1.47290774, 2.63685207, 1.70384859,\n",
+              "       1.61032504, 1.52501328, 1.95399032, 1.81967493, 1.76423173,\n",
+              "       1.53162271, 1.480381  , 1.83883617, 1.6394682 , 2.05986731,\n",
+              "       1.49003242, 1.4767562 , 1.61402383, 1.53535964, 1.66894676,\n",
+              "       2.4177132 , 2.75914846, 1.68261819, 2.34869197, 1.78260049,\n",
+              "       1.62415017, 2.34100799])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array(y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qmxuX-S4k7Er",
+        "outputId": "8fe17f07-a1ea-45c5-acf2-932f4834da94"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.4034637 , 1.40823997, 1.72090317, 1.08849047, 2.17011497,\n",
+              "       2.53096768, 1.68708284, 1.44638181, 1.3588862 , 1.69757803,\n",
+              "       2.21301278, 1.70731463, 1.12742878, 2.49837948, 1.84553212,\n",
+              "       1.69390274, 1.4724639 , 2.17429246, 2.05648559, 1.94517305,\n",
+              "       1.50419892, 1.19368103, 2.0342674 , 1.81947813, 2.22520587,\n",
+              "       1.2662317 , 1.08778142, 1.69731654, 1.45682135, 1.81967552,\n",
+              "       2.43941165, 2.53932706, 1.7895102 , 2.36973522, 2.00121433,\n",
+              "       1.72762258, 2.38639194])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating the DataFrame of test and train Dataset\n",
+        "train_Dataset = pd.DataFrame(X_train,y_train)\n",
+        "test_Dataset = pd.DataFrame(y_test)\n",
+        "test_Dataset.rename(columns= {'Close' :'Actual Closing Price'}, inplace =True)"
+      ],
+      "metadata": {
+        "id": "TUrnYAQqk73q"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_Dataset['Predicted Closing Price']= y_pred\n",
+        "test_Dataset.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "BffKYLEDlGb6",
+        "outputId": "be38b636-fec0-45ea-9c85-67526e05f0bd"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     Actual Closing Price  Predicted Closing Price\n",
+              "16               1.403464                 1.517387\n",
+              "179              1.408240                 1.532118\n",
+              "66               1.720903                 1.635190\n",
+              "40               1.088490                 1.475394\n",
+              "166              2.170115                 2.014715"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-2f69a2c8-a4b8-4198-81d8-f1cadede1f0c\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Actual Closing Price</th>\n",
+              "      <th>Predicted Closing Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>1.403464</td>\n",
+              "      <td>1.517387</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>179</th>\n",
+              "      <td>1.408240</td>\n",
+              "      <td>1.532118</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>66</th>\n",
+              "      <td>1.720903</td>\n",
+              "      <td>1.635190</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>40</th>\n",
+              "      <td>1.088490</td>\n",
+              "      <td>1.475394</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>166</th>\n",
+              "      <td>2.170115</td>\n",
+              "      <td>2.014715</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f69a2c8-a4b8-4198-81d8-f1cadede1f0c')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-2f69a2c8-a4b8-4198-81d8-f1cadede1f0c button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-2f69a2c8-a4b8-4198-81d8-f1cadede1f0c');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
         }
       ]
     }
